Fix line spacing

--- a/server/message/styles/text/base.css
+++ b/server/message/styles/text/base.css
@@ -24,6 +24,8 @@
 .message__messaging {
     white-space: normal;
     margin-right: 0.8rem;
+    position: relative;
+    top: -1px;
 }
 
 .message__messaging span.br {
